[package]
name = "randomizer"
version = "0.1.1"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "A random string/byte generator"
readme = "README.md"
categories = ["ramdom", "randomizer", "rand"]
license = "MIT"
repository = "https://github.com/nebula-technologies/randomizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
